adding test for storing nested objects in mongodb using Gson

--- a/bitemporal.tex
+++ b/bitemporal.tex
@@ -1,9 +1,37 @@
 \documentclass{article}
 
+\title{Document Oriented Management of Bitemporal Data}
+
+\author{me}
+
 \begin{document}
 
+\maketitle
+
 \begin{abstract}
-  Bitemporal data mang
+  Bitemporal data mangagement is required in industries ranging from insurances
+  over banking to the public sector. As a result, the SQL 2011 standard has
+  introduced bitemporal data management facilities for relational databases,
+  which address many, but not all bitemporal management requirements. This
+  paper shows that document oriented databases are beneficial when it comes to
+  managing bitemporal data, since document oriented data management reduces the
+  number of joins required in queries.
+ 
+  As a further contribution, this paper introduces an object oriented interface
+  for bitemporal databases that fulfills all requirements for bitemporal data
+  management. Finally, a small open-source prototype is introduced that shows
+  that this interface is easy to implement on top of a document oriented data
+  base in practice.
 \end{abstract}
+
+\section{Related Work}
+
+
+
+\section{Bitemporal Data Management in Practice}
+
+\section{Bitemporal Documents and Objects}
+
+\section{Bitemporal Document Databases}
 
 \end{document}
